--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -136,7 +136,7 @@
             <a href="#method">Методика</a>
           </li>
           <li class="hidden md:flex lg:ml-6">
-            <a href="#authors">Авторы</a>
+            <a href="#authors">Специалисты</a>
           </li>
           <li class="hidden md:flex lg:ml-6">
             <a href="gamelib.html">Библиотека игр</a>
@@ -311,9 +311,7 @@
         class="mx-auto dark:bg-slate-800 bg-slate-300 text-slate-600 lg:px-10 mb-4 pb-4"
       >
         <a id="authors" class="scroll-mt-28"></a>
-        <h1 class="text-center">
-          Авторы методики «Консультирование с помощью видеоигр»
-        </h1>
+        <h1 class="text-center">Специалисты</h1>
         <div
           class="container swiper mt-5 mb-5 flex justify-center items-center"
         >
@@ -415,17 +413,47 @@
                   </div>
                 </div>
               </div>
+              <div>
+                <h3 class="font-bold text-center pb-4">
+                  Евгений Сергеевич Эгле
+                </h3>
+                <div class="flex justify-center items-center gap-x-3">
+                  <a href="/docs/egle-1.pdf" target="_blank"
+                    ><img src="../assets/img/egle-1.jpg" class="w-10" alt=""
+                  /></a>
+                  <a href="/docs/egle-2.pdf" target="_blank"
+                    ><img src="../assets/img/egle-2.jpg" class="w-10" alt=""
+                  /></a>
+                  <a href="/docs/egle-3.pdf" target="_blank"
+                    ><img src="../assets/img/egle-3.jpg" class="w-10" alt=""
+                  /></a>
+                </div>
+                <div
+                  class="text-more flex flex-col justify-center items-center text-center text-sm mx-10 mb-5"
+                >
+                  <p class="pt-2 pb-2 font-bold">
+                    Руководитель социально-психологической службы МАОУ СШ № 150
+                  </p>
+                  <p>Педагог-психолог высшей категории, медиатор.</p>
+                  Медиация:
+                  <ul>
+                    <li>детско-родительских отношений;</li>
+                    <li>супружеских споров;</li>
+                    <li>при расторжении брака.</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
-          <!--          <div-->
-          <!--            id="button-next-experts"-->
-          <!--            class="hidden lg:flex swiper-navBtn swiper-button-next"-->
-          <!--          ></div>-->
-          <!--          <div-->
-          <!--            id="button-prev-experts"-->
-          <!--            class="hidden lg:flex swiper-navBtn swiper-button-prev"-->
-          <!--          ></div>-->
-          <!--          <div class="swiper-pagination"></div>-->
+          <div
+            id="button-next-experts"
+            class="hidden lg:flex swiper-navBtn swiper-button-next"
+          ></div>
+          <div
+            id="button-prev-experts"
+            class="hidden lg:flex swiper-navBtn swiper-button-prev"
+          ></div>
+          <div class="swiper-pagination"></div>
         </div>
       </section>
       <section class="px-2 mb-4 pb-2">
@@ -512,14 +540,14 @@
           class="hidden lg:flex flex-row justify-center items-center gap-x-4 text-white"
         >
           <a href="#method">Методика</a>
-          <a href="#authors">Авторы</a>
+          <a href="#authors">Специалисты</a>
           <a href="#contacts">Контакты</a>
           <a href="gamelib.html" target="_blank">Библиотека игр</a>
         </div>
         <div
           class="flex flex-row justify-center items-center gap-x-4 text-white fixed inset-x-0 bottom-0 lg:hidden"
         >
-          <a href="#authors">Авторы</a>
+          <a href="#authors">Специалисты</a>
           <a href="#contacts">Контакты</a>
           <a href="gamelib.html" target="_blank">Библиотека игр</a>
         </div>
@@ -543,7 +571,7 @@
         <div
           class="flex flex-row justify-center items-center gap-x-4 text-white"
         >
-          <a href="#authors">Авторы</a>
+          <a href="#authors">Специалисты</a>
           <a href="#contacts">Контакты</a>
           <a href="gamelib.html" target="_blank">Библиотека игр</a>
         </div>
