added new banner & swiper

--- a/client/index.html
+++ b/client/index.html
@@ -299,7 +299,7 @@
         <div
           class="container swiper mt-5 mb-5 flex justify-center items-center"
         >
-          <div class="slide-container overflow-hidden">
+          <div class="slide-container experts-general overflow-hidden">
             <div id="slider" class="swiper-wrapper pb-5">
               <div
                 class="swiper-slide rounded-md flex flex-col justify-center items-center"
