--- a/client/index.html
+++ b/client/index.html
@@ -414,6 +414,12 @@
                     Ярошевич Лариса Петровна
                   </h3>
                   <div class="flex justify-center items-center gap-x-3">
+                    <a href="/docs/yaroshevich-3.pdf" target="_blank"
+                      ><img
+                        src="assets/img/yaroshevich-3.jpg"
+                        class="w-10"
+                        alt=""
+                    /></a>
                     <a href="/docs/yaroshevich-1.pdf" target="_blank"
                       ><img
                         src="assets/img/yaroshevich-1.jpg"
