--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -220,7 +220,7 @@
     </header>
     <main>
       <section
-        class="hidden lg:flex flex-col gap-y-48 md:size-full md:bg-cover md:bg-banner-game-pattern justify-center pt-96 pb-20 opacity-95"
+        class="hidden lg:flex flex-col gap-y-48 md:size-full md:bg-cover md:bg-banner-game-pattern justify-start items-center pt-10 min-h-[450px] 2xl:h-[650px] opacity-95"
         style="
           background-image: linear-gradient(
               rgba(15, 23, 42, 0.5),
