--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -223,24 +223,49 @@
       <section class="px-2 mb-4 pb-2">
         <a id="authors" class="scroll-mt-28"></a>
         <h1 class="text-center">Библиотека игр и проработка компетенций</h1>
-        <div class="container mx-auto flex flex-col">
+        <div class="container mx-auto flex flex-col gap-y-2">
           <div>
             Перед организацией работы специалистам-психологам рекомендуется
             пройти игру самостоятельно.
           </div>
-          <div>Сокращения: Playstation – PS</div>
-          <div>Персональный компьютер, ноутбук или Steam Deck - ПК</div>
+          <div>Сокращения и термины:</div>
+          <div>PS – игровая консоль Playstation.</div>
+          <div>ПК – персональный компьютер, ноутбук или Steam Deck.</div>
+          <div>
+            <span class="font-bold">Split screen</span>
+            – игры с возможностью играть на одной консоли 2-м и более игрокам.
+          </div>
+          <div>
+            <span class="font-bold">Песочница</span> – игры с большой свободой
+            действий.
+          </div>
+          <div><span class="font-bold">RPG</span> – ролевая игра.</div>
+          <div>
+            <span class="font-bold">Платформер</span> – игры с упором на прыжках
+            по платформам.
+          </div>
+          <div>
+            <span class="font-bold">Beat ’em up</span> – игры с акцентом на
+            рукопашные схватки.
+          </div>
         </div>
         <div class="hidden md:block mt-10">
           <table class="table-auto">
             <thead>
               <tr class="text-slate-900 dark:text-slate-100">
-                <th class="px-6 py-2">Видеоигра</th>
-                <th class="px-6 py-2">Платформа</th>
-                <th class="px-6 py-2 max-w-60">
+                <th class="px-2 py-2">Видеоигра</th>
+                <th class="px-2 py-2">Платформа</th>
+                <th class="px-2 py-2 max-w-60">
                   Продолжительность основной сюжетной линии (приблизительная)
                 </th>
-                <th class="px-6 py-2">Компетенции</th>
+                <th class="px-2 py-2 max-w-60">
+                  Одиночные/<br />
+                  Мультиплеерные/<br />
+                  Split screen
+                </th>
+                <th class="px-2 py-2 max-w-60">Жанр</th>
+
+                <th class="px-2 py-2">Компетенции</th>
               </tr>
             </thead>
             <tbody></tbody>
