--- a/client/index.html
+++ b/client/index.html
@@ -649,53 +649,55 @@
                 Психологические консультации с помощью видеоигр в загородных
                 оздоровительных лагерях.
               </h2>
-              <div class="flex">
-                <img
-                  src="./assets/img/gameplayproject1.jpeg"
-                  alt="Видеоигры1"
-                  class="hidden md:block md:size-1/3 cursor-pointer pr-2"
-                  onclick="openModal(this.src)"
-                />
-                <table
-                  class="table border-separate border-spacing-y-2 bg-transparent md:w-2/3"
-                >
-                  <tbody>
-                    <tr>
-                      <td class="font-bold">Срок реализации:</td>
-                      <td>Летний период 2024 года.</td>
-                    </tr>
-                    <tr>
-                      <td class="font-bold">Охват:</td>
-                      <td>
-                        Более 1500 детей, проживающих на территории города
-                        Красноярска.
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="font-bold">Место проведения:</td>
-                      <td>Загородный лагерь «Ласточка».</td>
-                    </tr>
-                    <tr>
-                      <td class="font-bold">Источник финансирования:</td>
-                      <td>
-                        Cубсидия департамента социального развития администрации
-                        города Красноярска, собственные средства.
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="font-bold">Партнеры:</td>
-                      <td>
-                        Муниципальное автономное учреждение «Центр
-                        психолого-педагогической, медицинской и социальной
-                        помощи «Эго»;<br />Загородный стационарный детский
-                        оздоровительный лагерь «Ласточка»;<br />
-                        Муниципальное молодежное автономное учреждение
-                        «ИТ-Центр».
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+              <table
+                class="table border-separate border-spacing-y-2 bg-transparent text-slate-100 w-full"
+              >
+                <tbody>
+                  <tr>
+                    <td
+                      class="md:w-1/3 w-full md:pr-2 mb-2 md:mb-0"
+                      rowspan="4"
+                    >
+                      <img
+                        src="./assets/img/gameplayproject1.jpeg"
+                        alt="Видеоигры1"
+                        class="w-full cursor-pointer"
+                        onclick="openModal(this.src)"
+                      />
+                    </td>
+                    <td class="font-bold">Срок реализации:</td>
+                    <td>Летний период 2024 года.</td>
+                  </tr>
+                  <tr>
+                    <td class="font-bold">Охват:</td>
+                    <td>
+                      Более 1500 детей, проживающих на территории города
+                      Красноярска.
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="font-bold">Место проведения:</td>
+                    <td>Загородный лагерь «Ласточка».</td>
+                  </tr>
+                  <tr>
+                    <td class="font-bold">Источник финансирования:</td>
+                    <td>
+                      Cубсидия департамента социального развития администрации
+                      города Красноярска, собственные средства.
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="font-bold">Партнеры:</td>
+                    <td colspan="2">
+                      Муниципальное автономное учреждение «Центр
+                      психолого-педагогической, медицинской и социальной помощи
+                      «Эго»;<br />Загородный стационарный детский
+                      оздоровительный лагерь «Ласточка»;<br />Муниципальное
+                      молодежное автономное учреждение «ИТ-Центр».
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <div class="tab-content px-2" id="second-tab">
               <div class="flex flex-col md:flex-row">
