--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -228,25 +228,46 @@
             Перед организацией работы специалистам-психологам рекомендуется
             пройти игру самостоятельно.
           </div>
+          <div>
+            Общее количество видеоигр в библиотеке на сегодняшний день:
+            <span>${144}</span>
+          </div>
           <div>Сокращения и термины:</div>
-          <div>PS – игровая консоль Playstation.</div>
-          <div>ПК – персональный компьютер, ноутбук или Steam Deck.</div>
-          <div>
-            <span class="font-bold">Split screen</span>
-            – игры с возможностью играть на одной консоли 2-м и более игрокам.
-          </div>
-          <div>
-            <span class="font-bold">Песочница</span> – игры с большой свободой
-            действий.
-          </div>
-          <div><span class="font-bold">RPG</span> – ролевая игра.</div>
-          <div>
-            <span class="font-bold">Платформер</span> – игры с упором на прыжках
-            по платформам.
-          </div>
-          <div>
-            <span class="font-bold">Beat ’em up</span> – игры с акцентом на
-            рукопашные схватки.
+          <div class="flex flex-col gap-y-2 text-sm">
+            <div>PS – игровая консоль Playstation.</div>
+            <div>ПК – персональный компьютер, ноутбук или Steam Deck.</div>
+            <div>
+              <span class="font-bold">Split screen</span>
+              – игры с возможностью играть на одной консоли 2-м и более игрокам.
+            </div>
+            <div>
+              <span class="font-bold">Песочница</span> – игры с большой свободой
+              действий.
+            </div>
+            <div>
+              <span class="font-bold">RPG</span> – ролевая игра, для которой
+              характерны: возможность создавать главного героя, развивать
+              характеристики подконтрольных игроку персонажей, выбирать варианты
+              ответных реплик в диалогах с неигровыми персонажами, своими
+              действиями влиять на ход внутриигровых нарративов.
+            </div>
+            <div>
+              <span class="font-bold">Платформер</span> – игры с упором на
+              прыжках по платформам.
+            </div>
+            <div>
+              <span class="font-bold">Beat ’em up</span> – игры с акцентом на
+              рукопашные схватки.
+            </div>
+            <div>
+              <span class="font-bold">Hack and slash</span> – игры, в которых
+              происходит в основном истребление множества противников в ближнем
+              бою с помощью разнообразного оружия.
+            </div>
+            <div>
+              <span class="font-bold">Survival horror </span> – игры с упором на
+              выживание, нагнетание атмосферы страха.
+            </div>
           </div>
         </div>
         <div class="hidden md:block mt-10">
