--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -230,7 +230,7 @@
           </div>
           <div>
             Общее количество видеоигр в библиотеке на сегодняшний день:
-            <span>${144}</span>
+            <span id="total"></span>
           </div>
           <div>Сокращения и термины:</div>
           <div class="flex flex-col gap-y-2 text-sm">
