lib fixed and correct sorting added

--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -234,8 +234,13 @@
           </div>
           <div>Сокращения и термины:</div>
           <div class="flex flex-col gap-y-2 text-sm">
-            <div>PS – игровая консоль Playstation.</div>
-            <div>ПК – персональный компьютер, ноутбук или Steam Deck.</div>
+            <div>
+              <span class="font-bold">PS</span> – игровая консоль Playstation.
+            </div>
+            <div>
+              <span class="font-bold">ПК</span> – персональный компьютер,
+              ноутбук или Steam Deck.
+            </div>
             <div>
               <span class="font-bold">Split screen</span>
               – игры с возможностью играть на одной консоли 2-м и более игрокам.
