--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -220,6 +220,21 @@
       </div>
     </header>
     <main>
+      <section class="flex justify-end items-center p-4">
+        <div
+          class="inline-flex font-bold text-slate-500 bg-slate-500 rounded-md p-6"
+        >
+          Заметили ошибку? Пишите в группу:
+          <div class="ml-4 lg:ml-6 2xl:ml-10">
+            <a href="https://vk.com/genesiskrsk" target="_blank"
+              ><img
+                src="../assets/img/vk-logo.svg"
+                alt="vk-logo"
+                class="size-6"
+            /></a>
+          </div>
+        </div>
+      </section>
       <section class="px-2 mb-4 pb-2">
         <a id="authors" class="scroll-mt-28"></a>
         <h1 class="text-center">Библиотека игр и проработка компетенций</h1>
@@ -289,8 +304,13 @@
                   Мультиплеерные/<br />
                   Split screen
                 </th>
-                <th class="px-2 py-2 max-w-60">Жанр</th>
-
+                <!--                <th class="px-2 py-2 max-w-60">-->
+                <!--                  <div-->
+                <!--                    id="genreDropdownContainer"-->
+                <!--                    class="relative inline-block text-left"-->
+                <!--                  ></div>-->
+                <!--                </th>-->
+                <th class="px-2 py-2">Жанр</th>
                 <th class="px-2 py-2">Компетенции</th>
               </tr>
             </thead>
