filter for genre and platform added

--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -295,7 +295,12 @@
             <thead>
               <tr class="text-slate-900 dark:text-slate-100">
                 <th class="px-2 py-2">Видеоигра</th>
-                <th class="px-2 py-2">Платформа</th>
+                <th class="px-2 py-2 max-w-60">
+                  <div
+                    id="platformDropdownContainer"
+                    class="relative inline-block text-left"
+                  ></div>
+                </th>
                 <th class="px-2 py-2 max-w-60">
                   Продолжительность основной сюжетной линии (приблизительная)
                 </th>
@@ -304,13 +309,13 @@
                   Мультиплеерные/<br />
                   Split screen
                 </th>
-                <!--                <th class="px-2 py-2 max-w-60">-->
-                <!--                  <div-->
-                <!--                    id="genreDropdownContainer"-->
-                <!--                    class="relative inline-block text-left"-->
-                <!--                  ></div>-->
-                <!--                </th>-->
-                <th class="px-2 py-2">Жанр</th>
+                <th class="px-2 py-2 max-w-60">
+                  <div
+                    id="genreDropdownContainer"
+                    class="relative inline-block text-left"
+                  ></div>
+                </th>
+
                 <th class="px-2 py-2">Компетенции</th>
               </tr>
             </thead>
