games description accordeon

--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -72,7 +72,6 @@
         document.querySelector("html").classList.remove("dark");
       }
     </script>
-
     <title>Центр игровой психологической поддержки</title>
   </head>
   <!-- Yandex.Metrika counter -->
@@ -290,6 +289,7 @@
             </div>
           </div>
         </div>
+
         <div class="hidden md:block mt-10">
           <table class="table-auto">
             <thead>
@@ -305,6 +305,10 @@
                   Продолжительность основной сюжетной линии (приблизительная)
                 </th>
                 <th class="px-2 py-2 max-w-60">
+                  <div
+                    id="modeDropdownContainer"
+                    class="relative inline-block text-left"
+                  ></div>
                   Одиночные/<br />
                   Мультиплеерные/<br />
                   Split screen
