accordeon added info + modal

--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -221,6 +221,18 @@
     <main>
       <section class="flex justify-end items-center p-4">
         <div
+          id="imageModal"
+          class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center hidden z-50"
+        >
+          <img id="modalImage" src="" class="max-w-full max-h-full md:p-20" />
+          <button
+            class="absolute top-5 right-5 text-white text-2xl"
+            id="closeButton"
+          >
+            ✖
+          </button>
+        </div>
+        <div
           class="inline-flex font-bold text-slate-100 bg-slate-500 rounded-md p-6"
         >
           Заметили ошибку? Пишите в группу:
