--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -237,7 +237,7 @@
         >
           Заметили ошибку? Пишите в группу:
           <div class="ml-4 lg:ml-6 2xl:ml-10">
-            <a href="https://vk.com/genesiskrsk" target="_blank"
+            <a href="https://vk.com/icv24" target="_blank"
               ><img
                 src="../assets/img/vk-logo.svg"
                 alt="vk-logo"
