--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -380,7 +380,7 @@
             <a href="tel:+79029272400">+7 902 927-24-00</a>
             <a href="tel:+79504062612">+7 950 406-26-12</a>
           </div>
-          <a href="https://vk.com/genesiskrsk" target="_blank"
+          <a href="https://vk.com/icv24" target="_blank"
             ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
