--- a/client/index.html
+++ b/client/index.html
@@ -280,8 +280,12 @@
             class="container swiper mt-5 mb-5 flex justify-center items-center main-swiper"
           >
             <div class="swiper-wrapper"></div>
-            <div class="swiper-button-next swiper-navBtn"></div>
-            <div class="swiper-button-prev swiper-navBtn"></div>
+            <div
+              class="max-sm:hidden flex swiper-navBtn swiper-button-next"
+            ></div>
+            <div
+              class="max-sm:hidden flex swiper-navBtn swiper-button-prev"
+            ></div>
           </div>
 
           <div class="lg:grid grid-cols-12 mx-auto px-10">
@@ -301,11 +305,11 @@
           </div>
           <div
             id="button-next-experts"
-            class="hidden lg:flex swiper-navBtn swiper-button-next"
+            class="max-sm:hidden flex swiper-navBtn swiper-button-next"
           ></div>
           <div
             id="button-prev-experts"
-            class="hidden lg:flex swiper-navBtn swiper-button-prev"
+            class="max-sm:hidden flex swiper-navBtn swiper-button-prev"
           ></div>
           <div class="swiper-pagination"></div>
         </div>
@@ -336,26 +340,36 @@
           <div class="swiper-container video overflow-hidden">
             <div id="videoSlider" class="swiper-wrapper pb-5">
               <div class="swiper-slide">
-                <iframe
-                  src="https://vk.com/video_ext.php?oid=-216706470&id=456239028&hd=2"
-                  width="853"
-                  height="480"
-                  allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
-                  allowfullscreen
-                ></iframe>
+                <div class="max-sm:w-full flex justify-center items-center">
+                  <iframe
+                    src="https://vk.com/video_ext.php?oid=-216706470&id=456239028&hd=2"
+                    width="853"
+                    height="480"
+                    allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+                    allowfullscreen
+                  ></iframe>
+                </div>
               </div>
-              <div class="swiper-slide flex justify-center items-center">
-                <iframe
-                  src="https://vk.com/video_ext.php?oid=-48690112&id=456268249&hd=2&autoplay=0"
-                  width="853"
-                  height="480"
-                  allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
-                  allowfullscreen
-                ></iframe>
+              <div class="swiper-slide">
+                <div class="max-sm:w-full flex justify-center items-center">
+                  <iframe
+                    src="https://vk.com/video_ext.php?oid=-48690112&id=456268249&hd=2&autoplay=0"
+                    width="853"
+                    height="480"
+                    allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+                    allowfullscreen
+                  ></iframe>
+                </div>
               </div>
             </div>
-            <div id="button-next-video" class="swiper-button-next"></div>
-            <div id="button-prev-video" class="swiper-button-prev"></div>
+            <div
+              id="button-next-video"
+              class="max-sm:hidden flex swiper-navBtn swiper-button-next"
+            ></div>
+            <div
+              id="button-prev-video"
+              class="max-sm:hidden flex swiper-navBtn swiper-button-prev"
+            ></div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
