--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -113,7 +113,7 @@
   <!-- /Yandex.Metrika counter -->
   <body class="bg-slate-100 dark:bg-slate-900">
     <header
-      class="bg-slate-900 sticky top-0 z-10 border-b border-slate-300 md:text-sm lg:text-base"
+      class="flex flex-col sticky top-0 z-10 border-b border-slate-300 dark:bg-slate-700 bg-slate-300 md:text-sm lg:text-base"
     >
       <div
         class="flex justify-around lg:justify-between items-center max-md:px-2 py-1 lg:px-4 2xl:px-10"
@@ -157,6 +157,19 @@
         </div>
 
         <div class="flex items-center">
+          <div
+            class="hidden lg:inline-flex font-bold dark:text-slate-100 text-slate-900 rounded-md p-6"
+          >
+            Заметили ошибку? Пишите в группу:
+            <div class="ml-4 lg:ml-6 2xl:ml-10">
+              <a href="https://vk.com/icv24" target="_blank"
+                ><img
+                  src="../assets/img/vk-logo.svg"
+                  alt="vk-logo"
+                  class="size-6"
+              /></a>
+            </div>
+          </div>
           <div class="flex flex-col lg:ml-6 2xl:ml-10">
             <a href="tel:+79029272400"
               ><p class="text-sm lg:text-base">+7 902 927-24-00</p></a
@@ -166,14 +179,14 @@
               ><p class="text-sm lg:text-base">+7 950 406-26-12</p></a
             >
           </div>
-          <div class="ml-4 lg:ml-6 2xl:ml-10">
-            <a href="https://vk.com/genesiskrsk"
-              ><img
-                src="../assets/img/vk-logo.svg"
-                alt="vk-logo"
-                class="size-6 md:size-10"
-            /></a>
-          </div>
+          <!--          <div class="ml-4 lg:ml-6 2xl:ml-10">-->
+          <!--            <a href="https://vk.com/genesiskrsk"-->
+          <!--              ><img-->
+          <!--                src="../assets/img/vk-logo.svg"-->
+          <!--                alt="vk-logo"-->
+          <!--                class="size-6 md:size-10"-->
+          <!--            /></a>-->
+          <!--          </div>-->
           <div class="flex flex-col justify-center ml-2 lg:ml-4 2xl:ml-10">
             <input
               type="checkbox"
@@ -217,6 +230,20 @@
           </div>
         </div>
       </div>
+      <div
+        class="flex px-2 font-bold dark:text-slate-100 text-slate-900 rounded-md lg:hidden"
+      >
+        Заметили ошибку? Пишите в группу:
+        <div class="ml-4 lg:ml-6 2xl:ml-10">
+          <a href="https://vk.com/icv24" target="_blank"
+            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-6"
+          /></a>
+        </div>
+      </div>
+      <div class="p-2 self-center">
+        Общее количество видеоигр в библиотеке на сегодняшний день:
+        <span id="total"></span>
+      </div>
     </header>
     <main>
       <section class="flex justify-end items-center p-4">
@@ -232,19 +259,6 @@
             ✖
           </button>
         </div>
-        <div
-          class="inline-flex font-bold text-slate-100 bg-slate-500 rounded-md p-6"
-        >
-          Заметили ошибку? Пишите в группу:
-          <div class="ml-4 lg:ml-6 2xl:ml-10">
-            <a href="https://vk.com/icv24" target="_blank"
-              ><img
-                src="../assets/img/vk-logo.svg"
-                alt="vk-logo"
-                class="size-6"
-            /></a>
-          </div>
-        </div>
       </section>
       <section class="px-2 mb-4 pb-2">
         <a id="authors" class="scroll-mt-28"></a>
@@ -253,10 +267,6 @@
           <div>
             Перед организацией работы специалистам-психологам рекомендуется
             пройти игру самостоятельно.
-          </div>
-          <div>
-            Общее количество видеоигр в библиотеке на сегодняшний день:
-            <span id="total"></span>
           </div>
         </div>
         <div class="flex flex-col justify-center items-center w-full">
@@ -301,7 +311,7 @@
                 </th>
               </tr>
             </thead>
-            <tbody id="table"></tbody>
+            <tbody></tbody>
           </table>
         </div>
         <div id="minitable" class="flex flex-col md:hidden"></div>
