--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -116,21 +116,22 @@
       class="flex flex-col sticky top-0 z-10 border-b border-slate-300 dark:bg-slate-700 bg-slate-300 md:text-sm lg:text-base"
     >
       <div
-        class="flex justify-around lg:justify-between items-center max-md:px-2 py-1 lg:px-4 2xl:px-10"
+        class="flex justify-around lg:justify-between items-center max-md:px-2 lg:px-4 2xl:px-10"
       >
-        <div class="flex justify-between gap-x-20">
-          <a
-            class="flex flex-col justify-center items-center"
-            href="../index.html"
-            target="_blank"
-            ><img
-              src="../assets/img/genesis-logo.png"
-              class="w-8 md:w-10 lg:w-16 2xl:w-20"
-              alt="На главную"
-            />
-            <p class="hidden lg:block text-white">На главную</p>
-          </a>
+        <a
+          class="flex flex-col justify-center items-center"
+          href="../index.html"
+          target="_blank"
+          ><img
+            src="../assets/img/genesis-logo.png"
+            class="w-8 md:w-10"
+            alt="На главную"
+          />
+          <p class="hidden lg:block text-white">На главную</p>
+        </a>
+        <h1 class="text-center p-6">Библиотека игр и проработка компетенций</h1>
 
+        <div class="flex items-center">
           <div class="hidden lg:flex">
             <a
               class="flex flex-col justify-center items-center"
@@ -139,54 +140,9 @@
               ><img
                 src="../assets/img/game-centre-logo.png"
                 alt="Методика"
-                class="w-20 lg:w-60 2xl:w-52"
+                class="w-20"
             /></a>
           </div>
-        </div>
-
-        <div class="flex flex-col lg:hidden">
-          <a
-            class="flex flex-col justify-center items-center"
-            href="./game.html"
-            target="_blank"
-            ><img
-              src="../assets/img/game-centre-logo.png"
-              alt="Методика"
-              class="w-20 lg:w-40 2xl:w-52"
-          /></a>
-        </div>
-
-        <div class="flex items-center">
-          <div
-            class="hidden lg:inline-flex font-bold dark:text-slate-100 text-slate-900 rounded-md p-6"
-          >
-            Заметили ошибку? Пишите в группу:
-            <div class="ml-4 lg:ml-6 2xl:ml-10">
-              <a href="https://vk.com/icv24" target="_blank"
-                ><img
-                  src="../assets/img/vk-logo.svg"
-                  alt="vk-logo"
-                  class="size-6"
-              /></a>
-            </div>
-          </div>
-          <div class="flex flex-col lg:ml-6 2xl:ml-10">
-            <a href="tel:+79029272400"
-              ><p class="text-sm lg:text-base">+7 902 927-24-00</p></a
-            >
-
-            <a href="tel:+79504062612"
-              ><p class="text-sm lg:text-base">+7 950 406-26-12</p></a
-            >
-          </div>
-          <!--          <div class="ml-4 lg:ml-6 2xl:ml-10">-->
-          <!--            <a href="https://vk.com/genesiskrsk"-->
-          <!--              ><img-->
-          <!--                src="../assets/img/vk-logo.svg"-->
-          <!--                alt="vk-logo"-->
-          <!--                class="size-6 md:size-10"-->
-          <!--            /></a>-->
-          <!--          </div>-->
           <div class="flex flex-col justify-center ml-2 lg:ml-4 2xl:ml-10">
             <input
               type="checkbox"
@@ -230,6 +186,28 @@
           </div>
         </div>
       </div>
+      <div class="flex flex-col lg:hidden">
+        <a
+          class="flex flex-col justify-center items-center"
+          href="./game.html"
+          target="_blank"
+          ><img
+            src="../assets/img/game-centre-logo.png"
+            alt="Методика"
+            class="w-20 lg:w-40 2xl:w-52"
+        /></a>
+      </div>
+
+      <div
+        class="hidden lg:inline-flex justify-center items-center ml-auto font-bold dark:text-slate-100 text-slate-900 rounded-md p-4"
+      >
+        Заметили ошибку? Пишите в группу:
+        <div class="ml-4 lg:ml-6 2xl:ml-10">
+          <a href="https://vk.com/icv24" target="_blank"
+            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
+          /></a>
+        </div>
+      </div>
       <div
         class="flex px-2 font-bold dark:text-slate-100 text-slate-900 rounded-md lg:hidden"
       >
@@ -239,10 +217,6 @@
             ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-6"
           /></a>
         </div>
-      </div>
-      <div class="p-2 self-center">
-        Общее количество видеоигр в библиотеке на сегодняшний день:
-        <span id="total"></span>
       </div>
     </header>
     <main>
@@ -262,9 +236,13 @@
       </section>
       <section class="px-2 mb-4 pb-2">
         <a id="authors" class="scroll-mt-28"></a>
-        <h1 class="text-center">Библиотека игр и проработка компетенций</h1>
+
         <div class="container mx-auto flex flex-col gap-y-2">
-          <div>
+          <div class="p-2 self-center">
+            Общее количество видеоигр в библиотеке на сегодняшний день:
+            <span id="total"></span>
+          </div>
+          <div class="p-2 self-center">
             Перед организацией работы специалистам-психологам рекомендуется
             пройти игру самостоятельно.
           </div>
@@ -273,7 +251,7 @@
           <h2 class="py-5">FAQ</h2>
           <div class="flex flex-col w-full" id="faq"></div>
         </div>
-        <div class="hidden md:block mt-10">
+        <div class="hidden lg:block mt-10">
           <table class="table-auto">
             <thead>
               <tr class="text-slate-900 dark:text-slate-100">
@@ -314,7 +292,7 @@
             <tbody></tbody>
           </table>
         </div>
-        <div id="minitable" class="flex flex-col md:hidden"></div>
+        <div id="minitable" class="flex flex-col lg:hidden"></div>
       </section>
       <a href="#" class="fixed botton-2 right-4 z-10"
         ><svg
