no games found message

--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -252,7 +252,7 @@
           <div class="flex flex-col w-full" id="faq"></div>
         </div>
         <div class="hidden lg:block mt-10">
-          <table class="table-auto">
+          <table class="table-auto w-full">
             <thead>
               <tr class="text-slate-900 dark:text-slate-100">
                 <th class="px-2 py-2">Видеоигра</th>
