spider fixed screens

--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -129,7 +129,9 @@
           />
           <p class="hidden lg:block text-white">На главную</p>
         </a>
-        <h1 class="text-center p-6">Библиотека игр и проработка компетенций</h1>
+        <h1 class="hidden md:block text-center p-6">
+          Библиотека игр и проработка компетенций
+        </h1>
 
         <div class="flex items-center">
           <div class="hidden lg:flex">
