--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -113,7 +113,7 @@
   <!-- /Yandex.Metrika counter -->
   <body class="bg-slate-100 dark:bg-slate-900">
     <header
-      class="flex flex-col sticky top-0 z-10 border-b border-slate-300 dark:bg-slate-700 bg-slate-300 md:text-sm lg:text-base"
+      class="flex flex-col sticky top-0 z-10 border-b border-slate-300 bg-slate-700 md:text-sm lg:text-base"
     >
       <div
         class="flex justify-around lg:justify-between items-center max-md:px-2 lg:px-4 2xl:px-10"
