--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -291,7 +291,11 @@
                 </th>
               </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+              <tr id="endOfTable">
+                <td></td>
+              </tr>
+            </tbody>
           </table>
         </div>
         <div id="minitable" class="flex flex-col lg:hidden"></div>
