new banner and logo

--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -73,7 +73,7 @@
       }
     </script>
 
-    <title>Центр игровой психологической поддержки</title>
+    <title>Центр психологического гейминга</title>
   </head>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -215,21 +215,12 @@
       </div>
     </header>
     <main>
-      <section
-        class="hidden lg:flex flex-col gap-y-48 md:size-full md:bg-cover md:bg-banner-game-pattern justify-start items-center pt-10 min-h-[450px] 2xl:h-[650px] opacity-95"
-        style="
-          background-image: linear-gradient(
-              rgba(15, 23, 42, 0.5),
-              rgba(15, 23, 42, 0.5)
-            ),
-            url(&quot;/assets/img/game-banner.jpg&quot;);
-        "
-      >
-        <h1
-          class="flex justify-center text-2xl lg:text-5xl text-white drop-shadow-[0_6px_8px_rgba(0,0,0,0.8)]"
-        >
-          Центр игровой психологической поддержки
-        </h1>
+      <section class="hidden lg:flex overflow-hidden">
+        <img
+          src="../assets/img/game-banner.png"
+          alt=""
+          class="w-full h-[55vh] object-cover object-center"
+        />
       </section>
       <section
         class="flex-col dark:bg-slate-800 bg-slate-300 text-slate-600 lg:hidden"
