--- a/client/pages/gamelib.html
+++ b/client/pages/gamelib.html
@@ -72,7 +72,7 @@
         document.querySelector("html").classList.remove("dark");
       }
     </script>
-    <title>Центр игровой психологической поддержки</title>
+    <title>Центр психологического гейминга</title>
   </head>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -145,6 +145,17 @@
                 class="w-20"
             /></a>
           </div>
+          <div class="flex flex-col lg:hidden">
+            <a
+              class="flex flex-col justify-center items-center"
+              href="./game.html"
+              target="_blank"
+              ><img
+                src="../assets/img/game-centre-logo.png"
+                alt="Методика"
+                class="w-20 lg:w-40 2xl:w-52"
+            /></a>
+          </div>
           <div class="flex flex-col justify-center ml-2 lg:ml-4 2xl:ml-10">
             <input
               type="checkbox"
@@ -188,20 +199,8 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col lg:hidden">
-        <a
-          class="flex flex-col justify-center items-center"
-          href="./game.html"
-          target="_blank"
-          ><img
-            src="../assets/img/game-centre-logo.png"
-            alt="Методика"
-            class="w-20 lg:w-40 2xl:w-52"
-        /></a>
-      </div>
-
       <div
-        class="hidden lg:inline-flex justify-center items-center ml-auto font-bold text-slate-100 rounded-md p-4"
+        class="inline-flex justify-center items-center ml-auto font-bold text-slate-100 rounded-md p-4 lg:hidden"
       >
         Заметили ошибку? Пишите в группу:
         <div class="ml-4 lg:ml-6 2xl:ml-10">
@@ -211,12 +210,12 @@
         </div>
       </div>
       <div
-        class="flex px-2 font-bold dark:text-slate-100 text-slate-900 rounded-md lg:hidden"
+        class="hidden lg:inline-flex justify-center items-center ml-auto font-bold text-slate-100 rounded-md p-4"
       >
         Заметили ошибку? Пишите в группу:
         <div class="ml-4 lg:ml-6 2xl:ml-10">
           <a href="https://vk.com/icv24" target="_blank"
-            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-6"
+            ><img src="../assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
           /></a>
         </div>
       </div>
