--- a/client/index.html
+++ b/client/index.html
@@ -103,7 +103,7 @@
       clickmap: true,
       trackLinks: true,
       accurateTrackBounce: true,
-      webvisor: true,
+      webvisor: true
     });
   </script>
   <noscript
@@ -170,12 +170,12 @@
         <div class="flex items-center">
           <div class="flex flex-col lg:ml-6 2xl:ml-10">
             <a href="tel:+79029272400"
-              ><p class="text-sm md:text-base text-slate-100">
+              ><p class="text-sm whitespace-nowrap text-slate-100">
                 +7 902 927-24-00
               </p></a
             >
             <a href="tel:+79504062612"
-              ><p class="text-sm md:text-base text-slate-100">
+              ><p class="text-sm whitespace-nowrap text-slate-100">
                 +7 950 406-26-12
               </p></a
             >
