--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -100,7 +100,7 @@
       clickmap: true,
       trackLinks: true,
       accurateTrackBounce: true,
-      webvisor: true,
+      webvisor: true
     });
   </script>
   <noscript
@@ -156,10 +156,14 @@
         <div class="flex items-center">
           <div class="flex flex-col lg:ml-6 2xl:ml-10">
             <a href="tel:+79029272400"
-              ><p class="text-sm lg:text-base">+7 902 927-24-00</p></a
+              ><p class="text-sm whitespace-nowrap lg:text-base">
+                +7 902 927-24-00
+              </p></a
             >
             <a href="tel:+79831992391"
-              ><p class="text-sm lg:text-base">+7 983 199-23-91</p></a
+              ><p class="text-sm whitespace-nowrap lg:text-base">
+                +7 983 199-23-91
+              </p></a
             >
           </div>
           <div class="ml-4 lg:ml-6 2xl:ml-10">
