--- a/client/index.html
+++ b/client/index.html
@@ -185,7 +185,15 @@
               ><img
                 src="assets/img/vk-logo.svg"
                 alt="vk-logo"
-                class="size-6 md:size-10"
+                class="size-4 md:size-8"
+            /></a>
+          </div>
+          <div class="ml-2">
+            <a href="https://t.me/genesiskrsk" target="_blank"
+              ><img
+                src="assets/img/tg-logo.svg"
+                alt="tg-logo"
+                class="size-4 md:size-8"
             /></a>
           </div>
           <div class="flex flex-col justify-center ml-2 lg:ml-4 2xl:ml-10">
@@ -323,7 +331,9 @@
           id="imageModal"
           class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center hidden z-50"
         >
-          <img id="modalImage" src="" class="max-w-full max-h-full md:p-20" />
+          <div id="modalContent" class="relative">
+            <img id="modalImage" src="" class="max-w-full max-h-full md:p-20" />
+          </div>
           <button
             class="absolute top-5 right-5 text-white text-2xl"
             id="closeButton"
@@ -501,7 +511,7 @@
             <p>+7 950 406-26-12</p>
             <p>genesiskrsk@yandex.ru</p>
             <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
-            <p>Федотиков Матвей</p>
+            <p>Седых Анастасия</p>
           </div>
         </div>
 
@@ -523,8 +533,8 @@
               <p>+7 950 406-26-12</p>
               <p>genesiskrsk@yandex.ru</p>
               <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
-              <p>Федотиков Матвей</p>
-              <p>matveyfedotikov@gmail.com</p>
+              <p>Седых Анастасия</p>
+              <p></p>
             </div>
           </div>
           <div
@@ -578,8 +588,11 @@
             <a href="tel:+79029272400">+7 902 927-24-00</a>
             <a href="tel:+79504062612">+7 950 406-26-12</a>
           </div>
-          <a href="https://vk.com/dmitryurk"
+          <a href="https://vk.com/dmitryurk" target="_blank"
             ><img src="assets/img/vk-logo.svg" alt="vk-logo" class="size-8"
+          /></a>
+          <a href="https://t.me/genesiskrsk" target="_blank"
+            ><img src="assets/img/tg-logo.svg" alt="tg-logo" class="size-8"
           /></a>
         </div>
       </div>
