--- a/client/pages/game.html
+++ b/client/pages/game.html
@@ -171,9 +171,18 @@
               ><img
                 src="../assets/img/vk-logo.svg"
                 alt="vk-logo"
-                class="size-6 md:size-10"
+                class="size-4 md:size-8"
             /></a>
           </div>
+          <div class="ml-2">
+            <a href="https://t.me/genesiskrsk" target="_blank"
+              ><img
+                src="../assets/img/tg-logo.svg"
+                alt="tg-logo"
+                class="size-4 md:size-8"
+            /></a>
+          </div>
+
           <div class="flex flex-col justify-center ml-2 lg:ml-4 2xl:ml-10">
             <input
               type="checkbox"
@@ -314,8 +323,8 @@
             <p>+7 950 406-26-12</p>
             <p>genesiskrsk@yandex.ru</p>
             <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
-            <p>Федотиков Матвей</p>
-            <p>matveyfedotikov@gmail.com</p>
+            <p>Седых Анастасия</p>
+            <p></p>
           </div>
         </div>
 
@@ -336,8 +345,8 @@
               <p>+7 950 406-26-12</p>
               <p>genesiskrsk@yandex.ru</p>
               <h2 class="p-0 mt-2">Руководитель центра игровой поддержки:</h2>
-              <p>Федотиков Матвей</p>
-              <p>matveyfedotikov@gmail.com</p>
+              <p>Седых Анастасия</p>
+              <p></p>
             </div>
           </div>
           <div
