added small changes to the project my mirror

--- a/client/index.html
+++ b/client/index.html
@@ -352,6 +352,17 @@
               <div class="swiper-slide">
                 <div class="max-sm:w-full flex justify-center items-center">
                   <iframe
+                    src="images/mirror7.mp4"
+                    width="853"
+                    height="480"
+                    allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="max-sm:w-full flex justify-center items-center">
+                  <iframe
                     src="https://vk.com/video_ext.php?oid=-48690112&id=456268249&hd=2&autoplay=0"
                     width="853"
                     height="480"
